# hermes-cost-dashboard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
scripts/: run-tailscale.sh  run.sh
src/hermes_codexbar_cost_api/: __init__.py  app.py  dashboard.py  stats.py
tests/: test_dashboard_mobile.py  test_quota_stats.py
